syntax = "proto3";

option go_package = "github.com/rancher/opni/aiops/apis/loganomaly";

package loganomaly;

message Payload {
  string _id = 1;
  string cluster_id = 2;
  string log = 3;
  string masked_log = 4;
  string anomaly_level = 5;
  string log_type = 6;
  string template_matched = 7;
  int64 template_cluster_id = 8;
  string inference_model = 9;
  float opnilog_confidence = 10;
}

message PayloadList {
  repeated Payload items = 1;
}

